--- a/src/data/RNA_for_NMR/fit_parameters_mock.yaml
+++ b/src/data/RNA_for_NMR/fit_parameters_mock.yaml
@@ -1,7 +1,7 @@
 Sample name: Mock
 Data file to fit: mock_data_for_fit.csv
-Output plot file: mock_FRET_kinetics_fits2.pdf
-Optimal fit parameter file: mock_optimal_fit_params2.csv
+Output plot file: mock_FRET_kinetics_fits.pdf
+Optimal fit parameter file: mock_optimal_fit_params.csv
 Experimental parameters:
   Enzyme: # Enzyme concentration
     Value: [1.e-6, 1.e-5, 1.e-4]
@@ -14,35 +14,35 @@ Experimental parameters:
   Temperature: 
     Value: 303.15
 Modeling parameters:
-  Fit: False
-  Use individual replicates: False
+  Fit: True
+  Use individual replicates: True
   Minimizer: 
     Initial: 'leastsq'
     Subsequent : 'leastsq'
   Kinetic model: Distributive
   Fit parameters:
     k1:
-      Value: 51784008310797.69
+      Value: 50.1057431
       Units: s^-1
       Vary: False
       Minimum: 0
     km1:
-      Value: 13.005992176575226
+      Value: 557.749040
       Units: s^-1
       Vary: False
       Minimum: 0
     k2:
-      Value: 1125303.2543985157
+      Value: 13049895.6
       Units: M^-1s^-1
       Vary: False
       Minimum: 0
     km2:
-      Value: 7.73793711793228
+      Value: 29.2902145
       Units: s^-1
       Vary: False
       Minimum: 0
     kcat:
-      Value: 0.04811478945948411
+      Value: 0.08497154
       Units: s^-1
       Vary: False
       Minimum: 0
